k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aip-data
---
apiVersion: v1
kind: Namespace
metadata:
  name: aip-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: aip-ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: aip-frontend
